# ParallelProgramming

./: .gitignore  CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_exponent.cpp
include/: user_mpi.h
lab_1/: equation.h  lab_1.cpp  script.py  worker.cpp  worker.h
lab_2/: equation.h  lab_2.cpp  lab_2.h
task_exponent/: task_exponent.cpp
task_initial/: task_3.cpp
task_initial_omp/: CMakeLists.txt  task_2.cpp
task_nested/: CMakeLists.txt  task_nested.cpp
task_new_comm/: CMakeLists.txt  task_new_comm.cpp
task_pthread/: CMakeLists.txt  task_1.cpp  task_3.cpp
task_schedule/: output.txt  task_schedule.cpp
task_send/: out.txt  task_send.cpp
task_sort/: CMakeLists.txt  script.py  task_sort.cpp
tasks/lab_1/: CMakeLists.txt  lab_1.cpp  worker.cpp  worker.h
tasks/lab_2/: CMakeLists.txt  equation.h  script.py
tasks/omp_lab_1/: CMakeLists.txt  graph.ipynb  lab_omp.cpp  mpi_0.cpp  mpi_0.txt  mpi_1.cpp  mpi_1.txt  mpi_3.cpp  mpi_3.txt  omp.csv
tasks/task_copyin/: CMakeLists.txt  task_copyin.cpp
tasks/task_exponent/: CMakeLists.txt  task_exponent.cpp
tasks/task_initial/: CMakeLists.txt  task_1.cpp  task_2.cpp
tasks/task_initial_omp/: task_1.cpp  task_2.cpp  task_3.cpp
tasks/task_matrix/: CMakeLists.txt  benchmark_1.csv  benchmark_2.csv  benchmark_3.csv  benchmark_base.csv  benchmark_no_transform.csv  benchmark_schtrassen_2.csv  benchmark_schtrassen_3.csv  benchmark_schtrassen_4.csv  benchmark_schtrassen_kTreshold.csv  benchmark_transform.csv  main.cpp  matrix.hpp  script.ipynb
tasks/task_matrix/old/: benchmark_1.csv  benchmark_2.csv  benchmark_3.csv  benchmark_4.csv  benchmark_base.csv  benchmark_block.csv  benchmark_strassen.csv
tasks/task_opencl_devices/: CMakeLists.txt  main.cpp
tasks/task_pthread/: task_2.cpp
tasks/task_schedule/: CMakeLists.txt
tasks/task_send/: CMakeLists.txt  out2.txt  plot.ipynb
tasks/task_sort/: script.py  task_sort.cpp
tasks/task_sort_omp/: .csv  CMakeLists.txt  benchmark_0.csv  benchmark_1.csv  benchmark_end.csv  benchmark_end1.csv  benchmark_end2.csv  benchmark_insertion_size.csv  benchmark_insertion_size1.csv  benchmark_start.csv  benchmark_start1.csv  benchmark_task_size.csv  script.ipynb  task_sort_omp.cpp
